tests/lean/277a.lean.expected.out
277a.lean:4:7-4:15: error: unknown identifier 'nonexistent'
