tests/lean/277a.lean
set_option hygiene false
infixl:67 " <>< "  => nonexistent

#eval (1 <>< 11 : UInt64)
